# ImSpotify

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/app/: builder.rs  mod.rs  ui.rs
src/spotify/: auth.rs  io.rs  mod.rs
src/system/: clipboard.rs  mod.rs
